--- a/haailmo.cabal
+++ b/haailmo.cabal
@@ -12,6 +12,7 @@ executable "haailmo"
                    base >= 4 && < 5          
                    ,happstack-lite <= 7.3.3
                    ,text
+                   ,acid-state
     default-language: Haskell2010
 
     ghc-options: -O2 -Wall -fwarn-tabs
