--- a/haailmo.cabal
+++ b/haailmo.cabal
@@ -13,6 +13,8 @@ executable "haailmo"
                    ,happstack-lite <= 7.3.3
                    ,text
                    ,acid-state
+                   ,safecopy
+                   ,mtl
     default-language: Haskell2010
 
     ghc-options: -O2 -Wall -fwarn-tabs
