--- a/haailmo.cabal
+++ b/haailmo.cabal
@@ -10,7 +10,7 @@ build-type:         Simple
 executable "haailmo"
     build-depends: 
                    base >= 4 && < 5          
-                   ,happstack-lite <= 7.3.3
+                   ,happstack-server
                    ,text
                    ,acid-state
                    ,safecopy
